--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "themes/hugo-redirect"]
 	path = themes/hugo-redirect
 	url = https://github.com/dsrev/hugo-redirect.git
+[submodule "themes/hugo-cloak-email"]
+	path = themes/hugo-cloak-email
+	url = https://github.com/dsrev/hugo-cloak-email.git
+[submodule "themes/hugo-notice"]
+	path = themes/hugo-notice
+	url = https://github.com/dsrev/hugo-notice.git
